--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #149ddd;
+  background-color: #ff0000;
 }
 
 .resume .resume-title {
